- Fix references to motd and friends in src/win32. (#0003918)
- Remove include/nameser.h and reference to nameser.h from s_bsd.c. The associated
  functionality has been provided by c-ares for a long time.
- Remove remaining nameser.h references from Makfiles.
- Prevent stacked bans (like +b ~q:~q:~n:~c:#chanel) from crashing unrealircd due
  to over-recycling a static buffer. Discovered by syzop.
- helpop documentation for stacked extbans.
- Updated doc/coding-guidelines
- Fixed some odd behavior with SVSMODE and +z/-z, reported by TehRes (#0003498),
  fixed a strange SVSMODE +d <non-number> bug where it would act as a +x too.
- The patch from #0003888 made ./Config favor the curl in /usr, even if it
  was not compiled with c-ares, which is clearly a bad idea as then the
  entire IRCd can hang for several seconds or more...
  We now check if they support asynch DNS, and skip them if they don't.
- Remove extraneous `I' from configure.ac, run ./autogen.sh. (#3930)
- Added some checks in ./Config which (often) ensures that the self-compiled
  curl version is new enough and is not using a c-ares which is binary
  incompatible. If the self-compiled curl version is (too) outdated, then we
  now suggest to rename it and have the installer re-download and compile
  it automatically. This avoids some potential crashes.
- Give more clear error to users who use ``make custommodule'' without
  MODULEFILE. (#3935)
- Support compiling with a bundled c-ares again, the hacky way. (#3931)
- The configure.ac change silently changed the nospoof parameter in
  ./configure. This meant that the answer to NOSPOOF in ./Config was ignored
  and it was always enabled.
- Initialize ARG parameter properly in ./Config, otherwise everything fails.
- Fixed similar bug like nospoof with ./Config, but now with prefixaq.
- Same for IPv6
- Now define _SOLARIS, USE_LIBCURL, and ZIP_LINKS in setup.h instead
  of the Makefiles. This means better automatic rebuilds if the latter
  settings change.